hard-gists/3931936/run.log
=== Docker Run Log for 3931936 ===
Started at: Mi 29. Okt 14:05:59 CET 2025

[2025-10-29 14:06:00] START: Running container for 3931936
[2025-10-29 14:06:00] SUCCESS: Container 8b1302e30b69c65f92a0e66e2ea5efb955ddbd26b743ff570f2f9c9ccf678087 started for 3931936
=== Container logs for 3931936 ===
  File "/snippet.py", line 46
    except exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 3931936 ===
[2025-10-29 14:06:02] INFO: Container 8b1302e30b69c65f92a0e66e2ea5efb955ddbd26b743ff570f2f9c9ccf678087 has stopped
